[package]
name = "rp-enhanced-window-switcher"
version = "0.1.0"
authors = ["SWAMINATHAN Gurukandhamoorthi <ds.gurukandhamoorthi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.3"
serde = { version = "1.0.104", features = ["derive"] }
clap = "2.33.0"
